corrects labeling issues with font family for paragraphs, adjusts size, and spacing

--- a/css/style.css
+++ b/css/style.css
@@ -52,9 +52,10 @@ h4 {
 }
 
 p {
-  font-family: Source Serif Pro;
-  font-size: 16;
+  font-family: "Source Serif Pro", sans-serif;
+  font-size: 20px;
   font-weight: 400;
+  line-height: 1.3;
 }
 
 a {
